Polish integration tests